ajustes no backend