@@ -24,82 +24,56 @@ public class PedidosService {
         this.pedidoMapper = pedidoMapper;
     }
 
+    public Optional<PedidosDTO> buscarPorId(Long id) {
+        return pedidosClientsRepository.findById(id)
+                .map(pedidoMapper::toDTO);
+    }
+
+    @Transactional
     public PedidosDTO salvar(PedidosDTO dto) {
         Pedidos pedido = pedidoMapper.toEntity(dto);
+        associarPedidoNosItens(pedido);
         Pedidos salvo = pedidosClientsRepository.save(pedido);
         return pedidoMapper.toDTO(salvo);
+    }
+
+    @Transactional
+    public Optional<PedidosDTO> atualizar(Long id, PedidosDTO dto) {
+        return pedidosClientsRepository.findById(id).map(pedidoExistente -> {
+            pedidoExistente.getItens().clear();
+
+            pedidoMapper.updateEntityFromDTO(dto, pedidoExistente);
+
+            List<PedidoItem> novosItens = dto.getItens().stream().map(itemDto -> {
+                PedidoItem item = pedidoMapper.toItemEntity(itemDto);
+                item.setPedido(pedidoExistente);
+                return item;
+            }).toList();
+
+            pedidoExistente.getItens().addAll(novosItens);
+
+            Pedidos salvo = pedidosClientsRepository.save(pedidoExistente);
+            return pedidoMapper.toDTO(salvo);
+        });
     }
 
     public List<PedidosDTO> listarTodos() {
         return pedidosClientsRepository.findAll().stream()
                 .map(pedidoMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /*public Optional<PedidosDTO> buscarPorId(Long id) {
-        return pedidosClientsRepository.findById(id).map(pedidoMapper::toDTO);
-    }*/
-
-    public PedidosDTO buscarPorId(Long id) {
-        Pedidos pedido = pedidosClientsRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Pedido não encontrado"));
-
-        // Força a carga dos itens (se estiver como fetch LAZY)
-        pedido.getItens().size();
-
-        return pedidoMapper.toDTO(pedido);
+    private void associarPedidoNosItens(Pedidos pedido) {
+        pedido.getItens().forEach(item -> item.setPedido(pedido));
     }
 
     @Transactional
-    public Optional<Optional<PedidosDTO>> atualizar(Long id, PedidosDTO dto) {
-        return pedidosClientsRepository.findById(id).map(pedidoExistente -> {
-
-            // Limpa os itens antigos, se for uma atualização total dos itens
-            pedidoExistente.getItens().clear();
-
-            // Atualiza os dados do Pedido (exceto itens)
-            pedidoMapper.updateEntityFromDTO(dto, pedidoExistente);
-
-            // Mapeia os itens do DTO para entidade PedidoItem
-            List<PedidoItem> novosItens = dto.getItens().stream().map(itemDto -> {
-                PedidoItem item = pedidoMapper.toItemEntity(itemDto);
-                item.setPedido(pedidoExistente); // Associa o pedido no item
-                return item;
-            }).toList();
-
-            // Adiciona os itens atualizados
-            pedidoExistente.getItens().addAll(novosItens);
-
-            // Salva
-            Pedidos salvo = pedidosClientsRepository.save(pedidoExistente);
-            return Optional.of(pedidoMapper.toDTO(salvo));
-        });
+    public boolean deletar(Long id) {
+        return pedidosClientsRepository.findById(id).map(pedido -> {
+            pedidosClientsRepository.delete(pedido);
+            return true;
+        }).orElse(false);
     }
 
-
-
-    /*@Transactional
-    public Optional<PedidosDTO> atualizar(Long id, PedidosDTO dto) {
-        System.out.println("DTO recebido para atualizar: " + dto);
-        return pedidosClientsRepository.findById(id).map(pedidoExistente -> {
-            pedidoMapper.updateEntityFromDTO(dto, pedidoExistente); // usa @MappingTarget
-            Pedidos salvo = pedidosClientsRepository.save(pedidoExistente);
-            return pedidoMapper.toDTO(salvo);
-        });
-    }*/
-
-
-    /*public Optional<PedidosDTO> atualizar(Long id, PedidosDTO dto) {
-        return pedidosClientsRepository.findById(id).map(pedidoExistente -> {
-            Pedidos atualizado = pedidoMapper.toEntity(dto);
-            atualizado.setId(pedidoExistente.getId()); // Garante que é uma atualização
-            Pedidos salvo = pedidosClientsRepository.save(atualizado);
-            return pedidoMapper.toDTO(salvo);
-        });
-    }*/
-
-    public void deletar(Long id) {
-        pedidosClientsRepository.deleteById(id);
-    }
 
 }
